[package]
name = "priority_queue"
version = "0.1.0"
edition = "2024"

[dependencies]
critical-section = "1.2.0"

[dev-dependencies]
critical-section = { version = "1.2.0", features = ["std"] }

[target.'cfg(loom)'.dependencies]
loom = "0.7"

[features]
std = ["critical-section/std"]

 [lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(loom)'] }
